--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.16.0",
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
@@ -13,6 +14,8 @@
     "micro": "latest",
     "mongodb": "^3.1.0",
     "mongoose": "^5.1.7",
+    "mongoose-extend-schema": "^1.0.0",
+    "mongoose-schema-extend": "^0.2.2",
     "node-fetch": "^2.1.2"
   },
   "author": "",
