--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "core-js": "^2.4.1",
     "cors": "^2.8.4",
     "express": "^4.14.1",
+    "jwt-simple": "^0.5.1",
     "micro": "latest",
+    "moment": "^2.22.2",
     "mongodb": "^3.1.0",
     "mongoose": "^5.1.7",
     "mongoose-extend-schema": "^1.0.0",
